Test/typing/should_fail/methods_abstract_final.java
package tutu.titi.toto;

abstract class A {

    abstract final void myMethod(){}

}